--- a/client/src/assets/scss/foundation/_settings.scss
+++ b/client/src/assets/scss/foundation/_settings.scss
@@ -886,7 +886,8 @@ $grid-container: $global-width;
 $grid-columns: 12;
 $grid-margin-gutters: (
   small: 20px,
-  medium: 30px
+  medium: 4rem,
+  // large: 40px
 );
 $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: $grid-padding-gutters;
