--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -13,6 +13,24 @@
     tab-size: 4;
 }
 
+input {
+    padding-right: 3rem;
+}
+
+.radio-options {
+	border: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	break-before: always;
+	margin: 0 0 3em 0;
+}
+
+.radio-button {
+    font-weight: bold;
+    margin: 0 1em 0 0;
+}
+
 .center-button {
     display: flex;
     justify-content: center;
@@ -33,7 +51,7 @@
 }
 
 .red-bg {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 50%;
@@ -47,7 +65,7 @@
 .vl {
     border-right: 6px solid gray;
     height: 100%;
-    position: fixed;
+    position: absolute;
     left: 50%;
     top: 0;
     z-index: -1;
