--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -22,6 +22,13 @@ input {
     padding-right: 3rem;
 }
 
+.left-pane-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
 .radio-options {
 	border: none;
 	display: flex;
