--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -63,25 +63,25 @@
 }
 
 .flex {
+    display: flex;
+    margin-left: 3rem;
+    margin-right: 3rem;
     &-center {
-        display: flex;
+        @extend .flex;
         justify-content: center;
         align-content: center;
-        margin-left: 3rem;
-        margin-right: 3rem;
     }
     &-left {
-        display: flex;
-        align-items: center;
+        @extend .flex;
         justify-content: left;
-        margin-left: 3rem;
-        margin-right: 3rem;
+        align-items: center;
     }
 }
 
 .poke-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: 92vh;
     h1 {
         text-align: center;
         margin: 1.5rem 0rem
@@ -106,11 +106,8 @@
     border-right-style: solid;
     border-width: 5px;
     &-fill {
-        background-color: #4d0000;
-        border-right: gray;
-        border-right-style: solid;
-        border-width: 5px;
-        height: 100vh;
+        @extend .left-nav;
+    //     // height: 100vh;
     }
 }
 
