--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -76,12 +76,35 @@
         justify-content: left;
         align-items: center;
     }
+    &-between {
+        display: flex;
+        justify-content: space-between;
+    }
+    &-list-item {
+        display: flex;
+        align-items: center;
+        align-self: center;
+        align-content: center;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        height: 3rem;
+        cursor: pointer;
+        p {
+            padding-top: 1rem;
+        }
+    }
+}
+
+.overflow {
+    &-scroll {
+        overflow-y: scroll;
+    }
 }
 
 .poke-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 92vh;
+    height: 93vh;
     h1 {
         text-align: center;
         margin: 1.5rem 0rem
@@ -98,6 +121,20 @@
         @extend .poke-grid;
         grid-template-columns: 1fr 1fr 2fr;
     }
+    &-normalized {
+        grid-column-end: span 2;
+    }
+}
+
+.list-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.list-mon {
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
 }
 
 .left-nav {
@@ -107,12 +144,13 @@
     border-width: 5px;
     &-fill {
         @extend .left-nav;
-    //     // height: 100vh;
+        // height: 100vh;
     }
 }
 
 .top-bar {
     background-color: gray;
+    height: 7vh;
     .menu {
         background-color: gray;
     }
