--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -15,8 +15,7 @@
 
 .project-list {
         text-align: left;
-        margin: 1px 1px 1px 1px;
-        padding: 1px 1px 1px 1px;
+        margin: 1rem 1rem 1rem 1rem;
 }
 
 .sprite {
