--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -131,7 +131,8 @@
 }
 
 .list-mon {
-    border-style: solid;
+    border-top-style: solid;
+    border-bottom-style: solid;
     border-width: 1px;
     border-color: gray;
 }
