--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -14,20 +14,8 @@
 }
 
 .project-list {
-        text-align: left;
-        margin: 1rem 1rem 1rem 1rem;
-}
-
-.sprite {
-    width: auto;
-    &-list {
-        @extend .sprite;
-        height: 50px;
-    };
-    &-show {
-        @extend .sprite;
-        height: 200px;
-    }
+    text-align: left;
+    margin: 1rem 1rem 1rem 1rem;
 }
 
 .button {
@@ -35,20 +23,13 @@
     outline-color: gray;
 }
 
-.left-pane-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-}
-
 .radio-options {
-	border: none;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	break-before: always;
-	margin: 0 0 3em 0;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    break-before: always;
+    margin: 0 0 3em 0;
 }
 
 .radio-button {
@@ -56,9 +37,53 @@
     margin: 0 1em 0 0;
 }
 
+.sprite {
+    width: auto;
+    &-list {
+        @extend .sprite;
+        height: 50px;
+    }
+    &-show {
+        @extend .sprite;
+        height: 12vw;
+    }
+}
+
+.image {
+    display: block;
+    &-left-pane {
+        @extend .image;
+        margin-left: auto;
+        margin-right: auto;
+        width: 75%;
+    }
+    &-type-label {
+        @extend .image;
+        margin-top: 4px;
+        margin-bottom: 3px;
+        height: 18px;
+        width: auto;
+    }
+    &-show {
+        &-label {
+            width: 15vw;
+            height: auto;
+        }
+    }
+}
+
 .margins {
     margin-left: 3rem;
     margin-right: 3rem;
+    &-small {
+        margin-left: 1rem;
+    }
+    &-even {
+        &-1rem {
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+    }
 }
 
 .flex {
@@ -80,16 +105,72 @@
         justify-content: space-between;
     }
     &-list-item {
-        display: flex;
+        @extend .flex;
         align-items: center;
         align-self: center;
         align-content: center;
-        margin-left: 1rem;
+        justify-content: space-between;
+        margin-left: .1rem;
         margin-right: 1rem;
         height: 3rem;
         cursor: pointer;
         p {
             padding-top: 1rem;
+        }
+    &-small-types {
+        display: flex;
+        align-items: center;
+        margin-top: 3px;
+    }
+    }
+    &-show-top {
+        @extend .flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-content: center;
+    }
+}
+
+.poke-grid {
+    &-vert {
+        &-show {
+            display: grid;
+            grid-template-rows: 10vw 10vw 1fr;
+        }
+    }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 93vh;
+    h1 {
+        text-align: center;
+        margin: 1.5rem 0rem;
+    }
+    &-project-list {
+        @extend .poke-grid;
+        grid-template-columns: 1fr 2fr;
+    }
+    &-pokedex-list {
+        @extend .poke-grid;
+        grid-template-columns: 25% 1fr;
+    }
+    &-pokedex-show {
+        @extend .poke-grid;
+        grid-template-columns: 25% 1fr 3fr;
+    }
+    &-normalized {
+        grid-column-end: span 2;
+    }
+    &-show-top {
+        @extend .poke-grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 10vw;
+    }
+    &-list-info {
+        display: grid;
+        grid-template-columns: 7fr 45fr 16fr;
+        &-header {
+            display: grid;
+            grid-template-columns: 22.25fr 7fr 45fr 16fr;
         }
     }
 }
@@ -100,34 +181,9 @@
     }
 }
 
-.poke-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 93vh;
-    h1 {
-        text-align: center;
-        margin: 1.5rem 0rem
-    }
-    &-project-list {
-        @extend .poke-grid;
-        grid-template-columns: 1fr 2fr;
-    }
-    &_pokedex-list {
-        @extend .poke-grid;
-        grid-template-columns: 1fr 3fr;
-    }
-    &_pokedex-show {
-        @extend .poke-grid;
-        grid-template-columns: 1fr 1fr 2fr;
-    }
-    &-normalized {
-        grid-column-end: span 2;
-    }
-}
-
 .list-grid {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
 }
 
 .list-mon {
