--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -37,6 +37,12 @@
     margin: 0 1em 0 0;
 }
 
+.text {
+    &-grayed {
+        color: gray;
+    }
+}
+
 .sprite {
     width: auto;
     &-list {
@@ -104,6 +110,11 @@
         display: flex;
         justify-content: space-between;
     }
+    &-around {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
     &-list-item {
         @extend .flex;
         align-items: center;
@@ -128,19 +139,30 @@
         flex-direction: column;
         justify-content: space-around;
         align-content: center;
+        align-items: center;
+    }
+    &-single-ability {
+        display: flex;
+        justify-content: left;
+        margin-left: 3vw;
+        align-items: center;
+    }
+    &-single-stat {
+        display: flex;
+        align-items: center;
     }
 }
 
 .poke-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 93vh;
     &-vert {
         &-show {
             display: grid;
             grid-template-rows: 10vw 10vw 1fr;
         }
     }
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 93vh;
     h1 {
         text-align: center;
         margin: 1.5rem 0rem;
@@ -172,6 +194,15 @@
             display: grid;
             grid-template-columns: 22.25fr 7fr 45fr 16fr;
         }
+    }
+    &-abilities-list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr)
+
+    }
+    &-stats-list {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr)
     }
 }
 
