--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -41,6 +41,9 @@
     &-grayed {
         color: gray;
     }
+    &-bold {
+        font-weight: bold;
+    }
 }
 
 .sprite {
@@ -121,25 +124,25 @@
         align-self: center;
         align-content: center;
         justify-content: space-between;
-        margin-left: .1rem;
+        margin-left: 0.1rem;
         margin-right: 1rem;
         height: 3rem;
-        cursor: pointer;
         p {
             padding-top: 1rem;
         }
-    &-small-types {
-        display: flex;
-        align-items: center;
-        margin-top: 3px;
-    }
+        &-small-types {
+            display: flex;
+            align-items: center;
+            margin-top: 3px;
+        }
     }
     &-show-top {
-        @extend .flex;
+        display: flex;
+        margin-left: 3rem;
         flex-direction: column;
         justify-content: space-around;
         align-content: center;
-        align-items: center;
+        align-items: left;
     }
     &-single-ability {
         display: flex;
@@ -189,20 +192,19 @@
     }
     &-list-info {
         display: grid;
-        grid-template-columns: 7fr 45fr 16fr;
+        grid-template-columns: 7fr 40fr 21fr;
         &-header {
             display: grid;
-            grid-template-columns: 22.25fr 7fr 45fr 16fr;
+            grid-template-columns: 22.25fr 7fr 40fr 21fr;
         }
     }
     &-abilities-list {
         display: grid;
-        grid-template-columns: repeat(3, 1fr)
-
+        grid-template-columns: repeat(3, 1fr);
     }
     &-stats-list {
         display: grid;
-        grid-template-columns: repeat(6, 1fr)
+        grid-template-columns: repeat(7, 1fr);
     }
 }
 
@@ -222,6 +224,7 @@
     border-bottom-style: solid;
     border-width: 1px;
     border-color: gray;
+    cursor: pointer;
 }
 
 .nav-pane {
