--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -64,6 +64,12 @@
     }
 }
 
+.layer{
+    &-1 {
+        z-index: 1;
+    }
+}
+
 .image {
     display: block;
     &-left-pane {
@@ -191,6 +197,12 @@
         align-content: center;
         display: flex;
         margin: 1rem 3rem;
+    }
+    &-edit-button {
+        display: flex;
+        justify-content: right;
+        align-content: flex-start;
+        margin: 1rem;
     }
 }
 
