--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -105,6 +105,7 @@ h5 {
         &-cell {
             display: flex;
             justify-content: center;
+            width: 100%;
         }
     }
     &-pokeshow-ability {
